# project_ros2

./: README.md
xeros10_real/: CMakeLists.txt  package.xml
xeros10_real/config/: arm_controllers.yaml  joint_names_xeros10.yaml
xeros10_real/launch/: display.launch  gazebo.launch  gazebo.launch.py
xeros10_real/meshes/: arm1.STL  arm2.STL  base_link.STL  wheel1.STL  wheel2.STL  wheel3.STL
xeros10_real/rviz/: config.rviz
xeros10_real/scripts/: keyboard_arm.py
xeros10_real/urdf/: xeros10.csv  xeros10.urdf
