<?xml version="1.0"?>
<package format="3">
  <name>xeros10_real</name>
  <version>0.0.0</version>
  <description>robot</description>

  <maintainer email="you@todo.todo">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>robot_state_publisher</depend>
  <depend>gazebo_ros</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/.."/>
  </export>

</package>
